# vsa-proto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client_config.json  server_config.json
cmake/: FindCPLEX.cmake  FindGLPK.cmake
datasets/test_images/: input.txt
datasets/test_videos/: list.txt  v4l2_loopback.txt
metrics/CocoMap/: Coco_mAP.py  create_image_list.sh  get_val2017.sh  output_json2txt.py
metrics/CocoMap/results/: coco_val_example_results.json
patches/: darknet_detector.patch
scripts/: datasets.sh  env_das5.sh  google_drive.py  install_darknet.sh  lat_smoothing.py  visualize.py
simulation/: shape.sh
simulation/data/: 10mbit-20s.txt  40mbit-20s.txt  80mbit-20s.txt  lte-ugent-bw.txt  sample.txt
simulation/data/artificial/: decreasing.txt  increasing.txt  random.txt  spike_down.txt  spike_up.txt  steady.txt
simulation/data/artificial_1.5m/: decreasing.txt  increasing.txt  random.txt  spike_down.txt  spike_up.txt  steady.txt
simulation/data/wifi/: wifi_static_other_room.txt  wifi_static_other_room2.txt  wifi_static_other_room3.txt  wifi_static_same_room.txt  wifi_static_same_room2.txt  wifi_static_same_room3.txt  wifi_walking.txt  wifi_walking2.txt  wifi_walking3.txt  wifi_walking_half.txt
src/: client.cpp  common.h  env_time.h  filters.h  frame_reader.h  message.h  model_manager_pool.h  queue.h  server.cpp  tcp.h
src/controller/: basic_controller.h  controller.h  fixed_controller.h  pid_controller.h
src/controller/mpc/: mpc.lp  mpc.mod  mpc_1.mod  mpc_controller.h  mpc_predictors.h  mpc_solver.h  mpc_stats.h  run_glpk.sh
src/tests/: detection.cpp  detection_timing.cpp  test_cplex.cpp  test_glpk.cpp
